# Selah

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  index.html  package-lock.json  package.json  run.ps1  run.sh  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: appstore.yml  build.yml  deploy-docs.yml  msstore.yml  release.yml
docs/: index.md  privacy.md  terms.md  updater-release.md
docs/.vitepress/: config.ts
docs/guide/: ai.md  architecture.md  character.md  faq.md  features.md  grades.md  home.md  index.md  install.md  live.md  mail.md  syllabus.md  timetable.md  todo.md
docs/public/: CNAME
scripts/: apply-version.mjs  build-macos-sherpa-runtime.sh  build-windows-directml-runtime.ps1  find-release-by-tag.mjs  package-msix.ps1  reconcile-updater-signatures.mjs  resolve-release-version.mjs  stage-windows-runtime.mjs  upload-release-asset.mjs
src/: App.svelte  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  Entitlements.DeveloperID.plist  Entitlements.plist  Info.plist  PrivacyInfo.xcprivacy  build.rs  tauri.appstore.conf.json  tauri.conf.json  tauri.msstore.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: appstore.json  default.json  store-managed.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent.rs  agent_commands.rs  agent_error.rs  agent_prompts.rs  agent_provider.rs  agent_tools.rs  ai.rs  app_updates.rs  auth.rs  background_refresh.rs  client.rs  commands.rs  config.rs  cookie_bridge.rs  db.rs  embedded_keys.rs  google_calendar.rs  google_commands.rs  keychain.rs  kwic_client.rs  kwic_commands.rs  lib.rs  live.rs  local_ai.rs  luna_client.rs  luna_commands.rs  luna_parser.rs  macos_native_agent.rs  macos_subtitle_overlay.rs  mail.rs  mail_commands.rs  main.rs  native_notification.rs  notifier.rs  parser.rs  power.rs  read_state.rs  stt.rs  syllabus.rs  timetable.rs  (+4 more)
src-tauri/src/agent_tools/: academic.rs  calendar.rs  files_browser.rs  insights.rs  mail_lookup.rs  records.rs
src-tauri/src/commands/: app_config.rs  auth_session.rs  browser.rs  downloads.rs  session.rs  syllabus.rs  weather.rs
src-tauri/src/cookie_bridge/: macos.rs  mod.rs  windows.rs
src-tauri/src/live/: ai_output.rs  cache.rs  markdown.rs  types.rs
src-tauri/src/luna_commands/: downloads.rs  navigation.rs
src-tauri/src/luna_parser/: course.rs  detail.rs  inquiry.rs  overview.rs
src-tauri/src/luna_parser/detail/: links.rs  model.rs  notice_filter.rs  quill.rs
src-tauri/src/macos_native_agent/: ui_support.rs
src-tauri/src/timetable/: ai_analysis.rs
src-tauri/tests/: local_ai_test.rs
src/lib/: Dashboard.svelte  DataTable.svelte  DebugPanel.svelte  Icon.svelte  Login.svelte  Modal.svelte  StudentBar.svelte  Titlebar.svelte  TodoDraftCard.svelte  ViewLoader.svelte  api.ts  demo.ts  demoStore.ts  externalLinkDelegate.ts  notify.ts  schedule.ts  stores.ts  system.ts  trayStatus.ts  types.ts  updater.ts  updaterRuntime.store.ts  updaterRuntime.ts  whiteboardLayout.ts
src/lib/onboarding/: CapabilityMatrix.svelte  FirstVisitTip.svelte  Onboarding.svelte  onboardingChecks.ts  onboardingState.ts
src/lib/views/: AgentChat.svelte  AiTodoPage.svelte  ChangeInfo.svelte  GradesView.svelte  HomePage.svelte  IctTools.svelte  Live.svelte  LunaTodo.svelte  MailView.svelte  NotificationsUnified.svelte  Registration.svelte  Settings.svelte  Syllabus.svelte  Timetable.svelte
src/lib/views/home/: homeData.ts
src/lib/views/live/: LiveNotice.svelte  LiveRightRail.svelte  LiveScrollToBottomButton.svelte  LiveSummaryCard.svelte  LiveTopCapsule.svelte  LiveTranscriptStage.svelte  LiveWhiteboardPage.svelte  liveCourseSelection.ts  liveMarkdown.ts  liveTypes.ts
src/lib/views/settings/: SettingsAbout.svelte  SettingsAi.svelte  SettingsCalendar.svelte  SettingsDebug.svelte  SettingsDownload.svelte  SettingsMail.svelte  SettingsNotification.svelte  SettingsSession.svelte
static/: ai-result.html  browser-toolbar.html  detail.html  downloads.html  kwic-detail.html  lightbox.js  luna-detail.html  markdown-reader.html  markdown-render-worker.js  settings.html  tray-popup.html  university-detail.html  whiteboard-layout.js
static/university-detail/: university-detail.css
static/university-detail/js/: attendance-modal.js  cache.js  core.js  downloads.js  drafts.js  icons.js  init.js  lightbox.js  link-router.js  render-attendance.js  render-common.js  render-course.js  render-detail.js  render-discussion.js  render-external.js  render-inquiry.js  render-kwic.js  render-material.js  render-survey.js  render-thread-posts.js  render-thread.js  report-submit.js  rich-text.js  state.js  url.js
