[package]
name = "selah-app"
version = "0.5.0"
description = "Selah - 新月の下で、知性を繋ぐ。すべての関学生に。"
authors = ["mirai-mamori"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = ["tray-icon", "image-png", "unstable"] }
tauri-plugin-log = "2"
reqwest = { version = "0.12", features = ["cookies", "json", "native-tls", "multipart"] }
tokio = { version = "1", features = ["sync", "time", "macros"] }
scraper = "0.22"
regex = "1"
base64 = "0.22"
url = "2"
urlencoding = "2.1.3"
dirs = "6"
cookie_store = "0.21"
reqwest_cookie_store = "0.8"
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
sha2 = "0.10"
tauri-plugin-notification = "2.3.3"
time = "0.3.41"
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-opener = "2.5.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
block2 = "0.6.2"
objc2-foundation = { version = "0.3.2", features = ["NSHTTPCookie", "NSArray", "NSString"] }
objc2-web-kit = { version = "0.3.2", features = ["WKWebsiteDataStore", "WKHTTPCookieStore", "block2"] }

[target.'cfg(target_os = "windows")'.dependencies]
webview2-com = "0.38"
windows-core = "0.61"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
